--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@suns-echoes/function-utils",
-	"version": "0.1.1",
+	"version": "0.1.2",
 	"description": "The library with function utilities.",
 	"keywords": [
 		"function",
@@ -8,10 +8,10 @@
 		"pointer"
 	],
 	"scripts": {
-		"build": "npm run check && node -r esm ./scripts/build-pre.js && npm run build:cjs && npm run build:esm && node -r esm ./scripts/build-post.js",
+		"build": "npm run check && npm run test && node -r esm ./scripts/build-pre.js && npm run build:cjs && npm run build:esm && node -r esm ./scripts/build-post.js",
 		"build:cjs": "tsc --project ./tsconfig.dist.cjs.json",
 		"build:esm": "tsc --project ./tsconfig.dist.esm.json",
-		"test": "cross-env TS_NODE_PROJECT=./tsconfig.test.json TS_NODE_FILES=true mocha --exit -r ts-node/register -r chai/register-expect -r ./setup/setup.ts",
+		"test": "cross-env TS_NODE_PROJECT=./tsconfig.test.json TS_NODE_FILES=true mocha --exit -r ts-node/register -r chai/register-expect.js -r ./setup/setup.ts",
 		"coverage": "c8 npm run test",
 		"lint": "eslint .",
 		"ts": "tsc",
@@ -27,23 +27,23 @@
 	"author": "Aneta Suns <suns.echoes@gmail.com>",
 	"license": "MIT",
 	"engines": {
-		"node": "16.13.0"
+		"node": "^16.14.0"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.3.0",
 		"@types/mocha": "^9.1.0",
-		"@types/node": "^17.0.10",
+		"@types/node": "^17.0.18",
 		"@types/sinon-chai": "^3.2.8",
-		"@typescript-eslint/eslint-plugin": "^5.10.0",
-		"@typescript-eslint/parser": "^5.10.0",
+		"@typescript-eslint/eslint-plugin": "^5.12.0",
+		"@typescript-eslint/parser": "^5.12.0",
 		"c8": "^7.11.0",
-		"chai": "^4.3.4",
+		"chai": "^4.3.6",
 		"cross-env": "^7.0.3",
-		"eslint": "^8.7.0",
+		"eslint": "^8.9.0",
 		"esm": "^3.2.25",
-		"mocha": "^9.1.4",
+		"mocha": "^9.2.0",
 		"sinon-chai": "^3.7.0",
-		"ts-node": "^10.4.0",
+		"ts-node": "^10.5.0",
 		"typescript": "^4.5.5"
 	}
 }
